# foldl-extended

./: README.md  foldl-extended.cabal
src/Control/Foldl/: Extended.hs
